use native d3 drag functionality, and ensure legend never goes off screen

--- a/packages/perspective-viewer-d3fc/src/less/chart.less
+++ b/packages/perspective-viewer-d3fc/src/less/chart.less
@@ -88,7 +88,7 @@
         top: 15px;
         right: 15px;
         left: auto;
-        max-width: 150px;
+        width: 150px;
 
         &[borderbox-on-hover="true"] {
             &:hover {
